--- a/TableShopApp.csproj
+++ b/TableShopApp.csproj
@@ -84,6 +84,48 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddProviderForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddProviderForm.Designer.cs">
+      <DependentUpon>AddProviderForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AddConsignmentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddConsignmentForm.Designer.cs">
+      <DependentUpon>AddConsignmentForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditProviderForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditProviderForm.Designer.cs">
+      <DependentUpon>EditProviderForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AuthorizationForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AuthorizationForm.Designer.cs">
+      <DependentUpon>AuthorizationForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProvidersForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProvidersForm.Designer.cs">
+      <DependentUpon>ProvidersForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditConsignmentForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditConsignmentForm.Designer.cs">
+      <DependentUpon>EditConsignmentForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditEmployeeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditEmployeeForm.Designer.cs">
+      <DependentUpon>EditEmployeeForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddTableForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,6 +139,12 @@
       <DependentUpon>AddEmployeeForm.cs</DependentUpon>
     </Compile>
     <Compile Include="DB.cs" />
+    <Compile Include="ConsignmentsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConsignmentsForm.Designer.cs">
+      <DependentUpon>ConsignmentsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="EmployeesForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,11 +171,35 @@
     <Compile Include="StatisticsForm.Designer.cs">
       <DependentUpon>StatisticsForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AddProviderForm.resx">
+      <DependentUpon>AddProviderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AddConsignmentForm.resx">
+      <DependentUpon>AddConsignmentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditProviderForm.resx">
+      <DependentUpon>EditProviderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AuthorizationForm.resx">
+      <DependentUpon>AuthorizationForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProvidersForm.resx">
+      <DependentUpon>ProvidersForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditConsignmentForm.resx">
+      <DependentUpon>EditConsignmentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditEmployeeForm.resx">
+      <DependentUpon>EditEmployeeForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AddTableForm.resx">
       <DependentUpon>AddTableForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AddEmployeeForm.resx">
       <DependentUpon>AddEmployeeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ConsignmentsForm.resx">
+      <DependentUpon>ConsignmentsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EmployeesForm.resx">
       <DependentUpon>EmployeesForm.cs</DependentUpon>
